<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/ops"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="4">

            <Button
                android:id="@+id/clear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="3"
                android:layout_weight="3"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="56dip"
                android:text="@string/op_clear"
                android:textSize="18sp"
                app:backgroundTint="@color/material_on_surface_emphasis_high_type"
                app:iconPadding="2dp" />

            <Button
                android:id="@+id/sqrt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="56dip"
                android:text="@string/op_sqrt"
                android:textSize="18sp"
                app:backgroundTint="@android:color/holo_orange_dark"
                app:iconPadding="2dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/seven"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="56dip"
                android:text="7"
                android:textSize="18sp"
                app:backgroundTint="@color/material_on_surface_emphasis_high_type"
                app:iconPadding="2dp" />

            <Button
                android:id="@+id/eight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="56dip"
                android:text="8"
                android:textSize="18sp"
                app:backgroundTint="@color/material_on_surface_emphasis_high_type"
                app:iconPadding="2dp" />

            <Button
                android:id="@+id/nine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="56dip"
                android:text="9"
                android:textSize="18sp"
                app:backgroundTint="@color/material_on_surface_emphasis_high_type"
                app:iconPadding="2dp" />

            <Button
                android:id="@+id/product"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="56dip"
                android:text="@string/op_multiplication"
                android:textSize="18sp"
                app:backgroundTint="@android:color/holo_orange_dark"
                app:iconPadding="2dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/four"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="56dip"
                android:text="4"
                android:textSize="18sp"
                app:backgroundTint="@color/material_on_surface_emphasis_high_type"
                app:iconPadding="2dp" />

            <Button
                android:id="@+id/five"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="56dip"
                android:text="5"
                android:textSize="18sp"
                app:backgroundTint="@color/material_on_surface_emphasis_high_type"
                app:iconPadding="2dp" />

            <Button
                android:id="@+id/six"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="56dip"
                android:text="6"
                android:textSize="18sp"
                app:backgroundTint="@color/material_on_surface_emphasis_high_type"
                app:iconPadding="2dp" />

            <Button
                android:id="@+id/subtract"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="56dip"
                android:text="@string/op_subtraction"
                android:textSize="18sp"
                app:backgroundTint="@android:color/holo_orange_dark"
                app:iconPadding="2dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/one"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="56dip"
                android:text="1"
                android:textSize="18sp"
                app:backgroundTint="@color/material_on_surface_emphasis_high_type"
                app:iconPadding="2dp" />

            <Button
                android:id="@+id/two"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="56dip"
                android:text="2"
                android:textSize="18sp"
                app:backgroundTint="@color/material_on_surface_emphasis_high_type"
                app:iconPadding="2dp" />

            <Button
                android:id="@+id/three"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="56dip"
                android:text="3"
                android:textSize="18sp"
                app:backgroundTint="@color/material_on_surface_emphasis_high_type"
                app:iconPadding="2dp" />

            <Button
                android:id="@+id/add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="56dip"
                android:text="@string/op_addition"
                android:textSize="18sp"
                app:backgroundTint="@android:color/holo_orange_dark"
                app:iconPadding="2dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/equal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="56dip"
                android:text="@string/op_equal"
                android:textSize="18sp"
                app:backgroundTint="@android:color/holo_orange_light"
                app:iconPadding="2dp" />

            <Button
                android:id="@+id/zero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="56dip"
                android:text="0"
                android:textSize="18sp"
                app:backgroundTint="@color/material_on_surface_emphasis_high_type"
                app:iconPadding="2dp" />

            <Button
                android:id="@+id/colon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="56dip"
                android:text="@string/digit_colon"
                android:textSize="18sp"
                app:backgroundTint="@color/material_on_surface_emphasis_high_type"
                app:iconPadding="2dp" />

            <Button
                android:id="@+id/divide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="56dip"
                android:text="@string/op_division"
                android:textSize="18sp"
                app:backgroundTint="@android:color/holo_orange_dark"
                app:iconPadding="2dp" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:ellipsize="start"
        android:gravity="center|right"
        android:maxLines="1"
        android:paddingRight="8dp"
        android:text="0"
        android:textSize="48sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="264dp" />
</androidx.constraintlayout.widget.ConstraintLayout>